--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,54 +1,51 @@
 {
-  "name": "fitness-frontend",
-  "version": "1.0.0",
-  "description": "Frontend repository of youLift App",
-  "main": "index.js",
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@emotion/css": "^11.0.0",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "typescript": "^4.0.3",
+    "web-vitals": "^0.2.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel serve src/index.html",
-    "watch": "parcel watch src/index.html",
-    "report": "PARCEL_BUNDLE_ANALYZER=1 BUNDLE_BUDDY=1 parcel build src/index.html --dist-dir build && live-server parcel-bundle-reports/default.html",
-    "build": "parcel build src/index.html --dist-dir build --public-url /",
-    "gh-pages": "parcel build src/index.html --dist-dir build --public-url /parcel-template-blank/",
-    "deploy": "gh-pages -d build",
-    "eslint": "eslint src/js/**/*.js",
-    "stylelint": "stylelint src/css/**/*.css",
-    "clean:cache": "rm -rf .parcel-cache dist build",
-    "clean:all": "rm -rf node_modules package-lock.json .parcel-cache dist build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint --max-warnings 0 . --ext .ts,.tsx"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fullstacktf/fitness-frontend.git"
+  "eslintConfig": {
+    "extends": "@cowcoders/eslint-config/react"
   },
-  "keywords": [],
-  "author": "youLift Team",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fullstacktf/fitness-frontend/issues"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
-  "homepage": "https://github.com/fullstacktf/fitness-frontend#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "gh-pages": "^3.1.0",
-    "htmlhint": "^0.14.1",
-    "live-server": "^1.2.1",
-    "parcel": "^2.0.0-nightly.425",
-    "postcss-font-magician": "^3.0.0",
-    "postcss-mixins": "^7.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.1.2",
-    "stylelint": "^13.7.2",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^20.0.0"
+    "@cowcoders/eslint-config": "^1.1.1",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5"
   }
 }
