--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "axios": "^0.21.0",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
@@ -52,6 +57,9 @@
     "@storybook/node-logger": "^6.1.10",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.10",
+    "@types/js-cookie": "^2.2.6",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/react-router-hash-link": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint-config-prettier": "^7.0.0",
