--- a/frontend/src/.eslintrc
+++ b/frontend/src/.eslintrc
@@ -18,7 +18,8 @@
       "linebreak-style": ["error", "unix"],
       "quotes": ["error", "single"],
       "semi": ["error", "always"],
-      "no-console": "off"
+      "no-console": "off",
+      "@typescript-eslint/no-explicit-any": "off"
     },
     "settings": {
       "react": {
