--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,71 +1,78 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
-    "@types/jest": "^26.0.18",
-    "@types/node": "^12.19.8",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "axios": "^0.21.0",
-    "js-cookie": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-hook-form": "^6.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-router-hash-link": "^2.3.1",
-    "react-scripts": "4.0.1",
-    "react-spinners": "^0.9.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test:watch": "react-scripts test",
-    "test": "react-scripts test --watchAll=false",
-    "eslint": "eslint src/",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@storybook/addon-actions": "^6.1.10",
-    "@storybook/addon-controls": "^6.1.10",
-    "@storybook/addon-essentials": "^6.1.10",
-    "@storybook/addon-links": "^6.1.10",
-    "@storybook/node-logger": "^6.1.10",
-    "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.10",
-    "@types/js-cookie": "^2.2.6",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/react-router-hash-link": "^1.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-react": "^7.21.5",
-    "prettier": "^2.0.5"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.11.6",
+        "@testing-library/react": "^11.2.2",
+        "@testing-library/user-event": "^12.5.0",
+        "@types/jest": "^26.0.18",
+        "@types/node": "^12.19.8",
+        "@types/react": "^16.14.2",
+        "@types/react-dom": "^16.9.10",
+        "axios": "^0.21.0",
+        "js-cookie": "^2.2.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-hook-form": "^6.13.1",
+        "react-router-dom": "^5.2.0",
+        "react-router-hash-link": "^2.3.1",
+        "react-scripts": "4.0.1",
+        "react-spinners": "^0.9.0",
+        "tailwindcss": "^2.0.2",
+        "twin.macro": "^2.0.7",
+        "typescript": "^4.1.2",
+        "web-vitals": "^0.2.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test:watch": "react-scripts test",
+        "test": "react-scripts test --watchAll=false",
+        "eslint": "eslint src/",
+        "eject": "react-scripts eject",
+        "storybook": "start-storybook -p 6006 -s public",
+        "build-storybook": "build-storybook -s public"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@storybook/addon-actions": "^6.1.10",
+        "@storybook/addon-controls": "^6.1.10",
+        "@storybook/addon-essentials": "^6.1.10",
+        "@storybook/addon-links": "^6.1.10",
+        "@storybook/node-logger": "^6.1.10",
+        "@storybook/preset-create-react-app": "^3.1.5",
+        "@storybook/react": "^6.1.10",
+        "@types/js-cookie": "^2.2.6",
+        "@types/react-router-dom": "^5.1.6",
+        "@types/react-router-hash-link": "^1.2.1",
+        "@typescript-eslint/eslint-plugin": "^4.9.1",
+        "@typescript-eslint/parser": "^4.9.1",
+        "eslint-config-prettier": "^7.0.0",
+        "eslint-plugin-prettier": "^3.2.0",
+        "eslint-plugin-react": "^7.21.5",
+        "prettier": "^2.0.5"
+    },
+    "babelMacros": {
+        "twin": {
+            "config": "tailwind.config.js"
+        }
+    }
 }
