--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.11.2",
         "@testing-library/jest-dom": "^5.11.6",
         "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.5.0",
@@ -12,6 +13,7 @@
         "@types/react-dom": "^16.9.10",
         "axios": "^0.21.0",
         "js-cookie": "^2.2.1",
+        "material-ui-popup-state": "^1.7.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-hook-form": "^6.13.1",
